# serializer version: 1
# name: TestTransactionsNotificationResend.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_multiple_notifications_created
  dict({
    'message': 'Transaction notification resent',
    'success': True,
  })
# ---
# name: TestTransactionsNotificationResend.test_success
  dict({
    'message': 'Transaction notification resent',
    'success': True,
  })
# ---
# name: TestTransactionsNotificationResend.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_transaction_no_buyer
  dict({
    'code': 'api.not_found',
    'message': 'Transaction recipient is not specified',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_transaction_not_pending
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_transaction_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsNotificationResend.test_user_is_buyer_not_seller
  dict({
    'message': 'Transaction notification resent',
    'success': True,
  })
# ---
